<?xml version="1.0" encoding="UTF-8"?>
<!--
  #%L
  wcm.io
  %%
  Copyright (C) 2021 wcm.io
  %%
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  #L%
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>io.wcm.caravan</groupId>
    <artifactId>io.wcm.caravan.rhyme.parent</artifactId>
    <version>1.2.0</version>
    <relativePath>../../tooling/parent/pom.xml</relativePath>
  </parent>

  <artifactId>io.wcm.caravan.rhyme.examples.osgi-jaxrs-example-launchpad</artifactId>
  <version>1-SNAPSHOT</version>

  <name>Rhyme - OSGI/JAX-RS Integration Test Launchpad</name>
  <description>
    A Sling Starter instance provisioned with all dependencies required to run the osgi-jaxrs-example-service bundle
  </description>

  <properties>
    <java.version>17</java.version>
    <sling.starter.version>14-SNAPSHOT</sling.starter.version>
    <jaxrs.publisher.version>1.2.3-SNAPSHOT</jaxrs.publisher.version>

    <starter.min.bundles.count>200</starter.min.bundles.count>
    <it.startTimeoutSeconds>60</it.startTimeoutSeconds>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.wcm.caravan</groupId>
      <artifactId>io.wcm.caravan.rhyme.api-interfaces</artifactId>
      <version>1.1.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.wcm.caravan</groupId>
      <artifactId>io.wcm.caravan.rhyme.core</artifactId>
      <version>1.2.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.wcm.caravan</groupId>
      <artifactId>io.wcm.caravan.rhyme.osgi-jaxrs</artifactId>
      <version>1.1.1-SNAPSHOT</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.wcm.caravan</groupId>
      <artifactId>io.wcm.caravan.rhyme.examples.osgi-jaxrs-example-service</artifactId>
      <version>1.0.0-SNAPSHOT</version>
      <scope>test</scope>
    </dependency>

    <!-- Apache HTTP Client (version overrides are required by the io.wcm.caravan.io.http bundle) -->
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.14</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpcore</artifactId>
      <version>4.4.16</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- AssertJ for fluent assertions -->
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>3.8.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- ensure that the jacoco java agent is available, which is required to instrument the launchpad for code coverage --> 
    <dependency>
      <groupId>org.jacoco</groupId>
      <artifactId>org.jacoco.agent</artifactId>
      <version>${jacoco-maven-plugin.version}</version>
      <classifier>runtime</classifier>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <build>
    <plugins>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>reserve-network-port</id>
            <goals>
              <goal>reserve-network-port</goal>
            </goals>
            <phase>initialize</phase>
            <configuration>
              <portNames>
                <portName>http.port</portName>
              </portNames>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.sling</groupId>
        <artifactId>slingfeature-maven-plugin</artifactId>
        <version>1.9.2</version>
        <extensions>true</extensions>

        <configuration>
          <replacePropertyVariables>jaxrs.publisher.version</replacePropertyVariables>
          <skipAddFeatureDependencies>true</skipAddFeatureDependencies>
          <aggregates>
            <aggregate>
              <classifier>app</classifier>
              <filesInclude>*.json</filesInclude>
              <variablesOverrides>
                <http.port>${http.port}</http.port>
              </variablesOverrides>
              <includeArtifact>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.starter</artifactId>
                <classifier>nosample_base</classifier>
                <version>${sling.starter.version}</version>
                <type>slingosgifeature</type>
              </includeArtifact>
              <includeArtifact>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.starter</artifactId>
                <classifier>oak_persistence_sns</classifier>
                <version>${sling.starter.version}</version>
                <type>slingosgifeature</type>
              </includeArtifact>
              <includeArtifact>
                <groupId>org.apache.sling</groupId>
                <artifactId>org.apache.sling.starter</artifactId>
                <classifier>junit</classifier>
                <version>${sling.starter.version}</version>
                <type>slingosgifeature</type>
              </includeArtifact>
            </aggregate>
          </aggregates>
          <scans>
            <scan>
              <includeClassifier>app</includeClassifier>
            </scan>
          </scans>
        </configuration>
        <executions>
          <execution>
            <id>prepare-features</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>aggregate-features</goal>
              <goal>analyse-features</goal>
              <goal>attach-features</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.sling</groupId>
        <artifactId>feature-launcher-maven-plugin</artifactId>
        <version>1.0.0</version>
        <configuration>
          <launches>
            <launch>
              <id>sling-starter-oak-tar</id>
              <feature>
                <groupId>io.wcm.caravan</groupId>
                <artifactId>io.wcm.caravan.rhyme.examples.osgi-jaxrs-example-launchpad</artifactId>
                <version>1-SNAPSHOT</version>
                <classifier>app</classifier>
                <type>slingosgifeature</type>
              </feature>
              <launcherArguments>
                <vmOptions>
                  <value>--add-opens java.base/java.lang=ALL-UNNAMED</value>
                  <!-- Workaround for issue with latest JDK: Invalid CEN header (invalid zip64 extra data field size) -->
                  <value>-Djdk.util.zip.disableZip64ExtraFieldValidation=true</value>
                </vmOptions>
                <frameworkProperties>
                  <org.osgi.service.http.port>${http.port}</org.osgi.service.http.port>
                  <org.apache.felix.http.jetty.responseBufferSize>5000000</org.apache.felix.http.jetty.responseBufferSize>
                </frameworkProperties>
              </launcherArguments>
              <startTimeoutSeconds>${it.startTimeoutSeconds}</startTimeoutSeconds>
            </launch>
          </launches>
        </configuration>
        <executions>
          <execution>
            <id>launcher-start</id>
            <goals>
              <goal>start</goal>
              <goal>stop</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <systemPropertyVariables>
            <launchpad.http.server.url>http://localhost:${http.port}</launchpad.http.server.url>
            <starter.http.test.ports>false:${http.port}</starter.http.test.ports>
            <starter.min.bundles.count>${starter.min.bundles.count}</starter.min.bundles.count>
            <!-- Comma-separated list of paths to check for 200 status -->
            <starter.check.paths>
              /system/console/bundles,
            </starter.check.paths>
          </systemPropertyVariables>
        </configuration>
        <executions>
          <execution>
            <id>integration-test</id>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- do not deploy into maven repository -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

      <!-- do not generate site for this project -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <configuration>
          <skip>true</skip>
          <skipDeploy>true</skipDeploy>
        </configuration>
      </plugin>
      
      <!-- do not generate javadocs -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      
    </plugins>
  </build>
  
</project>
